<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homecolor"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.details.DetailFragment">
    <ImageView
        android:id="@+id/backImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/detail"
            android:layout_height="match_parent"
            android:background="@color/homecolor">


            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="90dp"
                android:textColor="@color/textcolor"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/Impossible" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="140dp"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                app:layout_constraintDimensionRatio="2:3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:shapeAppearanceOverlay="@style/imageCorner"
                tools:background="@color/black" />

            <TextView
                android:id="@+id/genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="7dp"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toTopOf="@id/image"
                tools:text="@string/Drama" />

            <TextView
                android:id="@+id/score"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:background="@drawable/score_back"
                android:gravity="center"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/genre"
                tools:text="8.5" />

            <TextView
                android:id="@+id/originalLanguage"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="15dp"
                android:background="@drawable/lang_back"
                android:gravity="center"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/score"
                app:layout_constraintStart_toEndOf="@id/score"
                app:layout_constraintTop_toTopOf="@id/score"
                tools:text="@string/ES" />

            <TextView
                android:id="@+id/statusStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginTop="10dp"
                android:text="@string/status"
                android:textColor="@color/textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/image"
                app:layout_constraintTop_toBottomOf="@id/score" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/statusStr"
                app:layout_constraintTop_toBottomOf="@id/statusStr"
                tools:text="@string/Released" />

            <TextView
                android:id="@+id/revenueStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/revenue"
                android:textColor="@color/textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/status"
                app:layout_constraintTop_toBottomOf="@id/status" />

            <TextView
                android:id="@+id/revenue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/revenueStr"
                app:layout_constraintTop_toBottomOf="@id/revenueStr"
                tools:text="$634,342,000" />

            <TextView
                android:id="@+id/originalTitleStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/original_title"
                android:textColor="@color/textcolor"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <TextView
                android:id="@+id/originalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:textColor="@color/textcolor"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/originalTitleStr"
                app:layout_constraintTop_toBottomOf="@id/originalTitleStr"
                tools:text="@string/Life_of_PI" />

            <TextView
                android:id="@+id/overviewStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/overview"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/originalTitle"
                app:layout_constraintTop_toBottomOf="@id/originalTitle" />

            <TextView
                android:id="@+id/overview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/textcolor"
                android:textSize="14sp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="@id/overviewStr"
                app:layout_constraintTop_toBottomOf="@id/overviewStr"
                tools:text="@string/Believe_The_Unbelievable" />

            <TextView
                android:id="@+id/overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/textcolor"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/overview1"
                tools:text="@string/Spanning" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mainList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/detail"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/trailStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/traiers"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/overview"
                app:layout_constraintTop_toBottomOf="@id/overview" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/trailStr"
                tools:layout_editor_absoluteX="85dp" />

            <TextView
                android:id="@+id/actorStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/top_billed_cast"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/trailStr"
                app:layout_constraintTop_toBottomOf="@id/trails"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/actorStr"
                android:layout_marginTop="7dp"/>
            <TextView
                android:id="@+id/similarStr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/similar_movies"
                android:textColor="@color/textcolor"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/actorStr"
                app:layout_constraintTop_toBottomOf="@id/actor"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:layout_constraintTop_toBottomOf="@id/similarStr"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <FrameLayout
        android:id="@+id/action_bar"
        android:background="@color/homecolor"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_baseline_arrow_back_35" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>